--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
     <script src="./js/task-3.js" defer></script>
-    <title>Document</title>
+    <script src="./js/task-4.js" defer></script>
+    <title>GOIT-JS-HW-02</title>
   </head>
   <body></body>
 </html>
